--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,7 +11,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" role="button" data-toggle="dropdown">Edit <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" role="button">Edit <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#">Save</a></li>
             <li><a href="#">Load</a></li>
