--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -3,7 +3,12 @@
     <app-shopping-edit></app-shopping-edit>
     <hr>
     <div class="list-group">
-      <a class="list-group-item" style="cursor: pointer"></a>
+      <a
+        class="list-group-item" style="cursor: pointer"
+        *ngFor="let ingredient of ingredients"
+      >
+        ({{ ingredient.amount }}) {{ ingredient.name }}
+      </a>
     </div>
   </div>
 </div>
