--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-header (activeComponentChanged)="activeComponentChanged($event)"></app-header>
+<app-header (activeComponentChanged)="activeComponentChanged($event)" [activeComponent]="activeComponent"></app-header>
 <div class="container">
   <div class="row">
     <div class="ccol-md-12">
