--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
-<app-header (activeComponentChanged)="activeComponentChanged($event)" [activeComponent]="activeComponent"></app-header>
+<app-header></app-header>
 <div class="container">
   <div class="row">
     <div class="ccol-md-12">
-      <app-recipes *ngIf="activeComponent === 'recipes'"></app-recipes>
-      <app-shopping-list *ngIf="activeComponent === 'shopping-list'"></app-shopping-list>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
