--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,10 +8,10 @@
       <ul class="nav navbar-nav">
         <!--<li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">-->
         <li routerLinkActive="active">
-          <a href="#" [routerLink]="['/recipes']">Recipes</a>
+          <a href="#" routerLink="/recipes">Recipes</a>
         </li>
         <li routerLinkActive="active">
-          <a href="#" [routerLink]="['/shopping-list']">Shopping List</a>
+          <a href="#" routerLink="/shopping-list">Shopping List</a>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
