--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,41 +1,52 @@
-<div class="row">
-  <div class="col-xs-12">
-    <img
-      [src]="recipe.imageUrl"
-      [alt]="recipe.name"
-      class="img-responsive"
-      style="max-height: 300px;"
-    >
+<a role="button" class="btn btn-primary" routerLink="/recipes"><span class="glyphicon glyphicon-chevron-left"></span> Back</a>
+<div *ngIf="recipe; else noRecipe">
+  <div class="row">
+    <div class="col-xs-12">
+      <img
+        [src]="recipe.imageUrl"
+        [alt]="recipe.name"
+        class="img-responsive"
+        style="max-height: 300px;"
+      >
+    </div>
   </div>
-</div>
-<div class="row">
-  <div class="col-xs-12">
-    <h1>{{ recipe.name }}</h1>
+  <div class="row">
+    <div class="col-xs-12">
+      <h1>{{ recipe.name }}</h1>
+    </div>
   </div>
-</div>
-<div class="row">
-  <div class="col-xs-12">
-    <div class="btn-group" appDropdown>
-      <button type="button" class="btn btn-primary dropdown-toggle">Manage Recipe <span class="caret"></span></button>
-      <ul class="dropdown-menu">
-        <li><a style="cursor: pointer" (click)="onAddToShoppingList()">To Shopping List</a></li>
-        <li><a style="cursor: pointer">Edit Recipe</a></li>
-        <li><a style="cursor: pointer">Delete Recipe</a></li>
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="btn-group" appDropdown>
+        <button type="button" class="btn btn-primary dropdown-toggle">Manage Recipe <span class="caret"></span></button>
+        <ul class="dropdown-menu">
+          <li><a style="cursor: pointer" (click)="onAddToShoppingList()">To Shopping List</a></li>
+          <li><a style="cursor: pointer">Edit Recipe</a></li>
+          <li><a style="cursor: pointer">Delete Recipe</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-12">
+      <p>{{ recipe.description }}</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-12">
+      <ul class="list-group">
+        <li
+          *ngFor="let ingredient of recipe.ingredients"
+          class="list-group-item">({{ ingredient.amount }}) {{ ingredient.name }}
+        </li>
       </ul>
     </div>
   </div>
 </div>
-<div class="row">
-  <div class="col-xs-12">
-    <p>{{ recipe.description }}</p>
+<ng-template #noRecipe>
+  <div class="row">
+    <div class="col-xs-12">
+      <h3>Recipe not found.</h3>
+    </div>
   </div>
-</div>
-<div class="row">
-  <div class="col-xs-12">
-    <ul class="list-group">
-      <li
-        *ngFor="let ingredient of recipe.ingredients"
-        class="list-group-item">({{ ingredient.amount }}) {{ ingredient.name }}</li>
-    </ul>
-  </div>
-</div>
+</ng-template>
