Configuring Route Parameters

--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,4 +1,8 @@
-<a role="button" class="btn btn-primary" routerLink="/recipes"><span class="glyphicon glyphicon-chevron-left"></span> Back</a>
+<div class="row">
+  <div class="col-xs-12">
+    <a role="button" class="btn btn-primary" routerLink="/recipes"><span class="glyphicon glyphicon-chevron-left"></span> Back</a>
+  </div>
+</div>
 <div *ngIf="recipe; else noRecipe">
   <div class="row">
     <div class="col-xs-12">
