--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,5 +1,5 @@
 <a href="#"
-   [routerLink]="[1]"
+   [routerLink]="[recipeId]"
    routerLinkActive="active"
    class="list-group-item clearfix">
   <div class="pull-left">
