--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,15 +1,15 @@
 <div class="row">
   <div class="col-xs-12">
-    <button class="btn btn-success">New Recipe</button>
+    <a role="button" class="btn btn-success" routerLink="new">New Recipe</a>
   </div>
 </div>
 <hr>
 <div class="row">
   <div class="col-xs-12">
     <app-recipe-item
-      *ngFor="let recipe of recipes; let id = index"
+      *ngFor="let recipe of recipes; let i = index"
       [recipe]="recipe"
-      [recipeId]="id"
+      [index]="i"
     ></app-recipe-item>
   </div>
 </div>
