--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -7,19 +7,23 @@
           <input type="text" id="name"
                  name="name"
                  ngModel
+                 required
                  class="form-control">
         </div>
         <div class="col-sm-2 form-group">
           <label for="amount">Amount</label>
           <input type="number" id="amount"
                  name="amount"
-                 ngModel=""
+                 min="1"
+                 pattern="^[1-9]+[0-9]*$"
+                 ngModel
+                 required
                  class="form-control">
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <button class="btn btn-success" type="submit">Add</button>
+          <button class="btn btn-success" type="submit" [disabled]="f.invalid">Add</button>
           <button class="btn btn-danger" type="button">Delete</button>
           <button class="btn btn-default" type="button">Clear</button>
         </div>
