--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12">
-    <form (submit)="addCurrentIngredient(f)" #f="ngForm">
+    <form (submit)="onSubmit(f)" #f="ngForm">
       <div class="row">
         <div class="col-sm-5 form-group">
           <label for="name">Name</label>
@@ -25,7 +25,7 @@
         <div class="col-xs-12">
           <button class="btn btn-success" type="submit" [disabled]="f.invalid">{{ editMode ? 'Update' : 'Add' }}</button>
           <button class="btn btn-danger" type="button">Delete</button>
-          <button class="btn btn-default" type="button">Clear</button>
+          <button class="btn btn-default" type="button" (click)="onClearForm()" [disabled]="f.pristine">Clear</button>
         </div>
       </div>
     </form>
