--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,3 +1,61 @@
-<p>
-  recipe-edit works!
-</p>
+<div class="row">
+  <div class="col-xs-12">
+    <form>
+      <button type="submit" class="btn btn-success">Save</button>
+      <button type="button" class="btn btn-default">Cancel</button>
+    </form>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    <div class="form-group">
+      <label for="name">Name</label>
+      <input type="text" id="name"
+             class="form-control">
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    <div class="form-group">
+      <label for="image-path">Image URL</label>
+      <input type="text" id="image-path"
+             class="form-control">
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    <img src="" alt="" class="img-responsive">
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    <div class="form-group">
+      <label for="description">Description</label>
+      <textarea type="text" id="description" rows="6"
+                class="form-control"></textarea>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    <h3>Ingredients</h3>
+    <div class="row">
+      <div class="col-xs-8">
+        <input type="text"
+               class="form-control">
+      </div>
+      <div class="col-xs-2">
+        <input type="number"
+               class="form-control">
+      </div>
+      <div class="col-xs-2">
+        <button class="btn btn-danger btn-block">
+          <span class="glyphicon glyphicon-remove"></span>
+          <span class="sr-only">Remove</span>
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
