--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,9 +1,8 @@
+<form [formGroup]="recipeForm" (submit)="onSubmit()">
 <div class="row">
   <div class="col-xs-12">
-    <form>
-      <button type="submit" class="btn btn-success">Save</button>
-      <button type="button" class="btn btn-default">Cancel</button>
-    </form>
+    <button type="submit" class="btn btn-success">Save</button>
+    <button type="button" class="btn btn-default">Cancel</button>
   </div>
 </div>
 <div class="row">
@@ -11,6 +10,7 @@
     <div class="form-group">
       <label for="name">Name</label>
       <input type="text" id="name"
+             formControlName="name"
              class="form-control">
     </div>
   </div>
@@ -20,6 +20,7 @@
     <div class="form-group">
       <label for="image-path">Image URL</label>
       <input type="text" id="image-path"
+             formControlName="imagePath"
              class="form-control">
     </div>
   </div>
@@ -34,6 +35,7 @@
     <div class="form-group">
       <label for="description">Description</label>
       <textarea type="text" id="description" rows="6"
+                formControlName="description"
                 class="form-control"></textarea>
     </div>
   </div>
@@ -59,3 +61,4 @@
     </div>
   </div>
 </div>
+</form>
