--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -41,19 +41,23 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-xs-12">
+  <div class="col-xs-12" formArrayName="ingredients">
     <h3>Ingredients</h3>
-    <div class="row">
+    <div class="row"
+         *ngFor="let ingredient of recipeForm.get('ingredients').controls; let i = index"
+         [formGroupName]="i">
       <div class="col-xs-8">
         <input type="text"
+               formControlName="name"
                class="form-control">
       </div>
       <div class="col-xs-2">
         <input type="number"
+               formControlName="amount"
                class="form-control">
       </div>
       <div class="col-xs-2">
-        <button class="btn btn-danger btn-block">
+        <button class="btn btn-danger btn-block" type="button">
           <span class="glyphicon glyphicon-remove"></span>
           <span class="sr-only">Remove</span>
         </button>
