--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -44,6 +44,7 @@
   <div class="col-xs-12" formArrayName="ingredients">
     <h3>Ingredients</h3>
     <div class="row"
+         style="margin-bottom: 10px;"
          *ngFor="let ingredient of recipeForm.get('ingredients').controls; let i = index"
          [formGroupName]="i">
       <div class="col-xs-8">
@@ -57,9 +58,17 @@
                class="form-control">
       </div>
       <div class="col-xs-2">
-        <button class="btn btn-danger btn-block" type="button">
+        <button class="btn btn-danger pull-right" type="button">
           <span class="glyphicon glyphicon-remove"></span>
           <span class="sr-only">Remove</span>
+        </button>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-12">
+        <button class="btn btn-success pull-right" type="button" (click)="onAddIngredient()">
+          <span class="glyphicon glyphicon-plus"></span>
+          <span class="sr-only">Add</span>
         </button>
       </div>
     </div>
