--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="recipeForm" (submit)="onSubmit()">
 <div class="row">
   <div class="col-xs-12">
-    <button type="submit" class="btn btn-success">Save</button>
+    <button type="submit" class="btn btn-success" [disabled]="recipeForm.invalid">Save</button>
     <button type="button" class="btn btn-default">Cancel</button>
   </div>
 </div>
