Submitting the Recipe Edit Form

--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -20,7 +20,7 @@
     <div class="form-group">
       <label for="image-path">Image URL</label>
       <input type="text" id="image-path"
-             formControlName="imagePath"
+             formControlName="imageUrl"
              class="form-control">
     </div>
   </div>
