--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="col-xs-12">
     <button type="submit" class="btn btn-success" [disabled]="recipeForm.invalid">Save</button>
-    <button type="button" class="btn btn-default">Cancel</button>
+    <button type="button" class="btn btn-default" (click)="onCancel()">Cancel</button>
   </div>
 </div>
 <div class="row">
