Deleting Ingredients and Some Finishing Touches

--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -59,7 +59,7 @@
                class="form-control">
       </div>
       <div class="col-xs-2">
-        <button class="btn btn-danger pull-right" type="button">
+        <button class="btn btn-danger pull-right" type="button" (click)="onDeleteIngredient(i)">
           <span class="glyphicon glyphicon-remove"></span>
           <span class="sr-only">Remove</span>
         </button>
