Sending PUT Requests to Save Data

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -18,7 +18,7 @@
         <li class="dropdown" appDropdown>
           <a style="cursor: pointer" class="dropdown-toggle" role="button">Edit <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a style="cursor: pointer">Save</a></li>
+            <li><a style="cursor: pointer" (click)="onSaveData()">Save</a></li>
             <li><a style="cursor: pointer">Load</a></li>
           </ul>
         </li>
