GETting Back the Recipes

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -19,7 +19,7 @@
           <a style="cursor: pointer" class="dropdown-toggle" role="button">Edit <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a style="cursor: pointer" (click)="onSaveData()">Save</a></li>
-            <li><a style="cursor: pointer">Load</a></li>
+            <li><a style="cursor: pointer" (click)="onLoadData()">Load</a></li>
           </ul>
         </li>
       </ul>
