--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,6 +15,8 @@
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
+        <li><a routerLink="/signin">Login</a></li>
+        <li><a routerLink="/signup">Register</a></li>
         <li class="dropdown" appDropdown>
           <a style="cursor: pointer" class="dropdown-toggle" role="button">Edit <span class="caret"></span></a>
           <ul class="dropdown-menu">
