--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -6,10 +6,10 @@
         <input type="email" id="email" name="email" class="form-control" ngModel>
       </div>
       <div class="form-group">
-        <label for="password">Email</label>
+        <label for="password">Password</label>
         <input type="password" id="password" name="password" class="form-control" ngModel>
       </div>
-      <button class="btn btn-primary" type="submit">Sugn Up</button>
+      <button class="btn btn-primary" type="submit">Sign Up</button>
     </form>
   </div>
 </div>
