--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -46,7 +46,7 @@
     <h3>Ingredients</h3>
     <div class="row"
          style="margin-bottom: 10px;"
-         *ngFor="let ingredient of recipeForm.get('ingredients').controls; let i = index"
+         *ngFor="let ingredient of recipeForm.get('ingredients')['controls']; let i = index"
          [formGroupName]="i">
       <div class="col-xs-8">
         <input type="text"
