--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -24,7 +24,7 @@
       <div class="row">
         <div class="col-xs-12">
           <button class="btn btn-success" type="submit" [disabled]="f.invalid">{{ editMode ? 'Update' : 'Add' }}</button>
-          <button class="btn btn-danger" type="button" (click)="onDelete(editingIndex)" *ngIf="this.editMode">Delete</button>
+          <button class="btn btn-danger" type="button" (click)="onDelete()" *ngIf="this.editMode">Delete</button>
           <button class="btn btn-default" type="button" (click)="onClearForm()" *ngIf="!f.pristine">Clear</button>
         </div>
       </div>
