--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -15,12 +15,12 @@
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <ng-template [ngIf]="!isAuthenticated()">
+        <ng-template [ngIf]="!(authState | async).isAuthenticated">
           <li><a routerLink="/signin">Login</a></li>
           <li><a routerLink="/signup">Register</a></li>
         </ng-template>
-        <li><a style="cursor: pointer" (click)="onLogOut()" *ngIf="isAuthenticated()">Logout</a></li>
-        <li class="dropdown" appDropdown *ngIf="isAuthenticated()">
+        <li><a style="cursor: pointer" (click)="onLogOut()" *ngIf="(authState | async).isAuthenticated">Logout</a></li>
+        <li class="dropdown" appDropdown *ngIf="(authState | async).isAuthenticated">
           <a style="cursor: pointer" class="dropdown-toggle" role="button">Edit <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a style="cursor: pointer" (click)="onSaveData()">Save</a></li>
