--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -3,12 +3,12 @@
     <a role="button" class="btn btn-primary" routerLink="/recipes"><span class="glyphicon glyphicon-chevron-left"></span> Back</a>
   </div>
 </div>
-<div *ngIf="recipe; else noRecipe">
+<div *ngIf="(recipeState | async).recipes[id]; else noRecipe">
   <div class="row">
     <div class="col-xs-12">
       <img
-        [src]="recipe.imageUrl"
-        [alt]="recipe.name"
+        [src]="(recipeState | async).recipes[id].imageUrl"
+        [alt]="(recipeState | async).recipes[id].name"
         class="img-responsive"
         style="max-height: 300px;"
       >
@@ -16,7 +16,7 @@
   </div>
   <div class="row">
     <div class="col-xs-12">
-      <h1>{{ recipe.name }}</h1>
+      <h1>{{ (recipeState | async).recipes[id].name }}</h1>
     </div>
   </div>
   <div class="row">
@@ -33,14 +33,14 @@
   </div>
   <div class="row">
     <div class="col-xs-12">
-      <p>{{ recipe.description }}</p>
+      <p>{{ (recipeState | async).recipes[id].description }}</p>
     </div>
   </div>
   <div class="row">
     <div class="col-xs-12">
       <ul class="list-group">
         <li
-          *ngFor="let ingredient of recipe.ingredients"
+          *ngFor="let ingredient of (recipeState | async).recipes[id].ingredients"
           class="list-group-item">({{ ingredient.amount }}) {{ ingredient.name }}
         </li>
       </ul>
